svc.yml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: backend
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    run: echo
