ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: echo
  namespace: backend
spec:
  rules:
  - host: domain.name.goes.here
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              name: web
        path: /echo(/|$)(.*)
        pathType: Prefix
